--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId 'com.joyholdings.tunnel'
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode     1
-        versionName    '1.0'
+        versionCode     807
+        versionName    '8.0.7'
         externalNativeBuild {
             cmake {
                 arguments '-DANDROID_STL=c++_static'
@@ -80,8 +80,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'androidx.multidex:multidex:2.0.1'
-   // api 'com.android.billingclient:billing:2.2.1'
+    //api 'com.android.billingclient:billing:2.2.1'
     // ViewModel and LiveData
+    
+
+    implementation 'com.android.billingclient:billing:2.1.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     // Room
@@ -102,7 +106,7 @@ dependencies {
     // Espresso dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.anjlab.android.iab.v3:library:1.1.0'
+  //  implementation 'com.anjlab.android.iab.v3:library:1.1.0'
 }
 
 android.defaultConfig.externalNativeBuild.cmake {
